# ecolocator

./: .Rhistory  .gitignore  .readthedocs.yaml  README.md
.github/workflows/: ci.yml
data/: test_sample_data_cov.txt
data/test_genotypes.zarr/calldata/GT/: .zarray  0.0.0  0.1.0  0.2.0  0.3.0  0.4.0  0.5.0  0.6.0  0.7.0
data/test_genotypes.zarr/samples/: .zarray  0
data/test_genotypes.zarr/variants/ALT/: .zarray  0.0
data/test_genotypes.zarr/variants/CHROM/: .zarray  0
data/test_genotypes.zarr/variants/FILTER_PASS/: .zarray  0
data/test_genotypes.zarr/variants/ID/: 0
data/test_genotypes.zarr/variants/POS/: .zarray  0
data/test_genotypes.zarr/variants/QUAL/: .zarray  0
data/test_genotypes.zarr/variants/REF/: 0
docs/: Makefile  cli.md  conf.py  index.md  installation.md  quickstart.md
docs/_templates/autosummary/: module.rst
docs/api/: index.md
ecolocator/: pyproject.toml
ecolocator/src/ecolocator/: __init__.py  cli.py  ecolocator_class.py  network.py  utils.py
ecolocator/tests/: conftest.py  test_ecolocator_class.py  test_ecolocator_init.py  test_network.py  test_utils.py
imported_materials/: 1_launchSLiM.sh  2_launchmsprime.sh  3_launchSLiMtoEcolocator.sh  4_loocvcreatetestsets.py  5_launchEcolocator.sh  LASLiM_neutralmoverlay.py  SHAP.py  SLiMtoEcolocator.py  ecolocator.py  ecolocator.yml  localadaptation_nonWF.slim  runEcolocator.sh  runSLiM.sh  runSLiMtoEcolocator.sh  runmsprime.sh
scripts/: locator.py  plot_ecolocator.R  plot_locator.R  vcf_to_matrix.py
