[project]
name = "ecolocator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jordannrodriguez", email = "jordanrodriguez48@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = [
	"numpy>=2.0.0",
	"tensorflow",
	"h5py",
	"scikit-allel",
	"matplotlib",
	"scipy",
	"tqdm",
	"pandas",
	"zarr<3",
	"seaborn",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "msprime>=1.4.1",
	"pytest",
	"ruff"
]
